--- a/gits.html
+++ b/gits.html
@@ -1,38 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bounty Search Engine</title>
-    <style>
-        /* Same CSS as in index.html */
-        body { font-family: 'Courier New', Courier, monospace; background-color: #0f0f0f; color: #00ff00; margin: 0; padding: 0; text-align: center; overflow-x: hidden; }
-        .container { margin: 50px auto; max-width: 800px; padding: 20px; border: 1px solid #00ff00; border-radius: 10px; background-color: #1a1a1a; box-shadow: 0 0 10px #00ff00; }
-        h1 { color: #00ff00; font-size: 2em; margin-bottom: 10px; }
-        p { font-size: 1.2em; color: #00ff00; }
-        .gcse-search { margin-top: 20px; }
-        input.gsc-input { border: 2px solid #00ff00 !important; background-color: #333 !important; color: #00ff00 !important; font-family: 'Courier New', Courier, monospace; }
-        input.gsc-search-button { border: 2px solid #00ff00 !important; background-color: #1a1a1a !important; color: #00ff00 !important; font-family: 'Courier New', Courier, monospace; }
-        .footer { margin-top: 50px; font-size: 0.9em; color: #008000; }
-        .animated-text { display: inline-block; font-size: 1.2em; animation: flicker 2s infinite alternate; }
-        @keyframes flicker { 0% { opacity: 1; } 50% { opacity: 0.4; } 100% { opacity: 1; } }
-        .dorks-container { margin: 50px auto; max-width: 800px; padding: 20px; border: 1px solid #00ff00; border-radius: 10px; background-color: #1a1a1a; box-shadow: 0 0 10px #00ff00; color: #f0f0f0; }
-        .dorks-container h2, .dorks-container p, .dorks-container a { color: #00ff00; }
-        .dorks-container ul { list-style-type: none; padding: 0; }
-        .dorks-container li { margin-bottom: 10px; }
-        .dorks-container a { text-decoration: none; color: #69f0ae; }
-        .dorks-container a:hover { text-decoration: underline; }
-        .dorks-container a.clicked { color: #2196F3; }
-        .dorks-container p.description { margin-bottom: 5px; font-weight: bold; }
-        .dorks-container section { margin-top: 20px; border-top: 1px solid #ccc; padding-top: 20px; }
-        .dorks-container h2 { margin-bottom: 10px; }
-        .dorks-container ul.link-list { margin: 0; padding: 0; list-style-type: none; }
-        .dorks-container ul.link-list li { margin-bottom: 10px; }
-        .paging { margin-top: 20px; display: flex; justify-content: center; }
-        .paging a { color: #00ff00; padding: 5px 10px; border: 1px solid #00ff00; border-radius: 5px; margin: 0 5px; text-decoration: none; }
-        .paging a:hover { background-color: #333; }
-    </style>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bounty Search Engine</title>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
 <body>
     <div class="container">
         <h1>Bounty Search Engine</h1>
@@ -46,9 +19,8 @@
         <p>
             <a href="https://github.com/Vulnpire/bounty-search-engine" target="_blank">GitHub Repo</a><br><br>
         </p>
-        <label for="domainInput">Enter a domain:</label>
-        <input type="text" id="domainInput" placeholder="example.com">
-        <button id="updateDomainButton">Update Domain</button>
+        <input type="text" id="domainInput" class="search-input" placeholder="Enter a domain...">
+        <button id="updateDomainButton" class="search-button">Update Domain</button>
         <ul id="dorkList"></ul>
     </div>
 
