--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
     const apiKeys = [
         'AIzaSyC1dJFqnh9aU3XzT0atBz9jm7PpU58IKf0',
         'AIzaSyAC9XwXC7PC_gq1Rv1ImrLoM28hShlscDo',
-        'AIzaSyAmIVZk_swF9RQ-6mmp-jJa03njc-MKyfM'
+        'AIzaSyAmIVZk_swF9RQ-6mmp-jJa03njc-MKyfM',
+	'AIzaSyBk6XafrFvNWSTsJyw3OuWeBREXpMKHAzI'
     ];
     let currentApiKeyIndex = 0;
 
