--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         'AIzaSyC1dJFqnh9aU3XzT0atBz9jm7PpU58IKf0',
         'AIzaSyAC9XwXC7PC_gq1Rv1ImrLoM28hShlscDo',
         'AIzaSyAmIVZk_swF9RQ-6mmp-jJa03njc-MKyfM',
-	'AIzaSyBk6XafrFvNWSTsJyw3OuWeBREXpMKHAzI'
+	'AIzaSyBk6XafrFvNWSTsJyw3OuWeBREXpMKHAzI',
+	'AIzaSyAcbHnaoD6NX_XtykjoPsNLJq1V__1ik2Y'
     ];
     let currentApiKeyIndex = 0;
 
